--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="amazon.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="nav-left">
                 <div class="nav-logo ">
-                    <img class="border" src="/amazon/amazon.png" width="100%" height="50px" alt="logo">
+                    <img class="border" src="amazon.png" width="100%" height="50px" alt="logo">
                 </div>
                 <div class="nav-location border">
                     <div class="add-icon">
@@ -102,7 +102,7 @@
         <div class="grid-content">
             <h2>Top Deal</h2>
             <div class="grid-inner">
-               <img src="/amazon/item1.jpg" alt="item1" width="250px" height="230px">
+               <img src="item1.jpg" alt="item1" width="250px" height="230px">
                 <div>
                     <span class="red-icon">Up to 46% off</span>
                 <span>Limited time deal</span>
@@ -113,7 +113,7 @@
         <div class="grid-content">
             <h2>Deals in PCs</h2>
             <div class="grid-inner">
-                <img src="/amazon/item2.jpg" alt="item2" width="260px" height="300px">
+                <img src="item2.jpg" alt="item2" width="260px" height="300px">
             </div>
             <a class="grid-link" href="#">Shop now</a>
         </div>
@@ -122,7 +122,7 @@
                 Home décor under $50
             </h2>
             <div class="grid-inner">
-                <img src="/amazon/item3.jpg" alt="item2" width="260px" height="300px">
+                <img src="item3.jpg" alt="item2" width="260px" height="300px">
             </div>
             <a class="grid-link" href="#">shop now</a>
         </div>
@@ -130,19 +130,19 @@
             <h2>Refresh your space</h2>
             <div class="grid-inner">
                 <div class="grid-inner1">
-                    <img src="/amazon/item4.jpg" alt="item4" width="126px" height="114px">
+                    <img src="item4.jpg" alt="item4" width="126px" height="114px">
                     <p>Dining</p>
                 </div>
                 <div class="grid-inner1">
-                    <img src="/amazon/item5.jpg" alt="item5" width="126px" height="114px">
+                    <img src="item5.jpg" alt="item5" width="126px" height="114px">
                     <p>Home</p>
                 </div>
                 <div class="grid-inner1">
-                    <img src="/amazon/item6.jpg" alt="item6" width="126px" height="114px">
+                    <img src="item6.jpg" alt="item6" width="126px" height="114px">
                     <p>Kitchen</p>
                 </div>
                 <div class="grid-inner1">
-                    <img src="/amazon/item7.jpg" alt="item7" width="126px" height="114px" >
+                    <img src="item7.jpg" alt="item7" width="126px" height="114px" >
                     <p>Health and Beauty</p>
                 </div>
             </div>
@@ -151,18 +151,18 @@
         <div class="grid-content">
             <h2>Amazon Gadget Store</h2>
             <div class="grid-inner">
-                <img src="/amazon/item12.jpg" alt="item12" width="268px" height="172px">
+                <img src="item12.jpg" alt="item12" width="268px" height="172px">
                 <p>Smartphones</p>
                 <div class="grid-inner2">
-                    <img src="/amazon/item13.jpg" alt="item13" width="86px" height="75px">
+                    <img src="item13.jpg" alt="item13" width="86px" height="75px">
                     <p>Tablets</p>
                 </div>
                 <div class="grid-inner2">
-                    <img src="/amazon/item14.jpg" alt="item14" width="86px" height="75px">
+                    <img src="item14.jpg" alt="item14" width="86px" height="75px">
                     <p>Laptops</p>
                 </div>
                 <div class="grid-inner2">
-                    <img src="/amazon/item15.jpg" alt="item15" width="86px" height="75px">
+                    <img src="item15.jpg" alt="item15" width="86px" height="75px">
                     <p>TVs</p>
                 </div>
             </div>
@@ -172,19 +172,19 @@
             <h2>Shop deals in Fashion</h2>
             <div class="grid-inner">
                 <div class="grid-inner1">
-                    <img src="/amazon/item8.jpg" alt="item4" width="126px" height="114px">
+                    <img src="item8.jpg" alt="item4" width="126px" height="114px">
                     <p>Jeans under $50</p>
                 </div>
                 <div class="grid-inner1">
-                    <img src="/amazon/item9.jpg" alt="item5" width="126px" height="114px">
+                    <img src="item9.jpg" alt="item5" width="126px" height="114px">
                     <p>Tops under $25</p>
                 </div>
                 <div class="grid-inner1">
-                    <img src="/amazon/item10.jpg" alt="item6" width="126px" height="114px">
+                    <img src="item10.jpg" alt="item6" width="126px" height="114px">
                     <p>Dresses under $30</p>
                 </div>
                 <div class="grid-inner1">
-                    <img src="/amazon/item11.jpg" alt="item7" width="126px" height="114px" >
+                    <img src="item11.jpg" alt="item7" width="126px" height="114px" >
                     <p>Shoes under $50</p>
                 </div>
             </div>
@@ -193,21 +193,21 @@
         <div class="grid-content">
             <h2>Laptops for every need</h2>
             <div class="grid-inner">
-                <img src="/amazon/item16.jpg" alt="item16" width="260px" height="300px">
+                <img src="item16.jpg" alt="item16" width="260px" height="300px">
             </div>
             <a class="grid-link" href="#">Find your laptop here</a>
         </div>
         <div class="grid-content">
             <h2>Deals on shoes</h2>
             <div class="grid-inner">
-                <img src="/amazon/item17.jpg" alt="item17" width="260px" height="300px">
+                <img src="item17.jpg" alt="item17" width="260px" height="300px">
             </div>
             <a class="grid-link" href="#">See more</a>
         </div>
         <div class="grid-content">
             <h2>Player's paradise starts here</h2>
             <div class="grid-inner">
-                <img src="/amazon/item18.jpg" alt="item18" width="260px" height="290px">
+                <img src="item18.jpg" alt="item18" width="260px" height="290px">
             </div>
             <a class="grid-link" href="#">Shop video games</a>
         </div>
@@ -217,10 +217,10 @@
             <h2>Best Sellers in Home & Kitchen</h2>
        <div class="grid-inner3">
         <span ><img src="/amazon/items.jpg" alt="items" width="92px" height="200px"></span>
-        <img src="/amazon/items1.jpg" alt="items1" width="150px" height="200px">
-        <span><img src="/amazon/items2.jpg" alt="items2" width="58px" height="200px"></span>
-        <img src="/amazon/items3.jpg" alt="items3" width="200px" height="200px">
-        <img src="/amazon/items4.jpg" alt="items4" width="270px" height="147px">
+        <img src="items1.jpg" alt="items1" width="150px" height="200px">
+        <span><img src="items2.jpg" alt="items2" width="58px" height="200px"></span>
+        <img src="items3.jpg" alt="items3" width="200px" height="200px">
+        <img src="items4.jpg" alt="items4" width="270px" height="147px">
         
        </div>
         </div>
