--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="grid-content2">
             <h2>Best Sellers in Home & Kitchen</h2>
        <div class="grid-inner3">
-        <span ><img src="/amazon/items.jpg" alt="items" width="92px" height="200px"></span>
+        <span ><img src="items.jpg" alt="items" width="92px" height="200px"></span>
         <img src="items1.jpg" alt="items1" width="150px" height="200px">
         <span><img src="items2.jpg" alt="items2" width="58px" height="200px"></span>
         <img src="items3.jpg" alt="items3" width="200px" height="200px">
