--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="nav-left">
                 <div class="nav-logo ">
-                    <img class="border" src="amazon.png" width="100%" height="50px" alt="logo">
+                    <img class="border" src="amazon.PNG" width="100%" height="50px" alt="logo">
                 </div>
                 <div class="nav-location border">
                     <div class="add-icon">
